[metadata]
author = Kon
author_email = kon.y.ohr.n@gmail.com
description = A set of python modules for anomaly detection
license = BSD 3-Clause License
long_description = file: README.rst
name = kenchi
version = attr: kenchi.__version__
url = http://kenchi.readthedocs.io

[options]
include_package_data = True
install_requires =
  matplotlib>=2.1.1
  networkx>=2.1
  numpy>=1.14.0
  scikit-learn>=0.19.1
  scipy>=1.0.0
packages = find:
python_requires = >=3.6
tests_require =
  nose>=1.3.7

[options.packages.find]
exclude = tests

[flake8]
ignore = E221, E241, E251, E402
max-complexity = 10
max-line-length = 79

[pep8]
ignore = E221, E241, E251, E402
max-line-length = 79
