[metadata]
author = Kon
author_email = kon.y.ohr.n+kenchi@gmail.com
description = A set of python modules for anomaly detection
license = BSD 3-Clause License
long_description = file: README.rst
name = kenchi
url = http://kenchi.rtfd.io
version = attr: kenchi.__version__

[options]
include_package_data = True
install_requires =
  numpy>=1.13.3
  scikit-learn>=0.19.2
  scipy>=0.19.1
packages = find:
python_requires = >=3.6
tests_require =
  nose
test_suite = kenchi.tests.suite

[options.extras_require]
develop =
  matplotlib>=2.1.2
  networkx>=2.1
[options.packages.find]
exclude = tests

[flake8]
ignore = E221, E241, E251, E402
max-complexity = 10
max-line-length = 79

[pep8]
ignore = E221, E241, E251, E402
max-line-length = 79
